# FastAPI-backend

./: .gitignore  pyproject.toml
pyservice/: db.py  main.py  models.py
